--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,5 +14,12 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    
+}
+
+a#github_link {
+    text-decoration: none;
+    color: rgb(0, 0, 255);
+    background-color: rgba(255, 255, 255, 0.219);
+    border-radius: 5px;
+    padding: 8px;
 }
